--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Autonomous Vision Group
 email: andreas.geiger@tue.mpg.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Research Blog of the Autonomous Vision Group at the MPI-IS and University of Tübingen 
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
