--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 # github_username:  jekyll
 
 # Build settings
-# markdown: kramdown
+markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
