--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Autonomous Vision Group
 email: andreas.geiger@tue.mpg.de
 description: >- # this means to ignore newlines until "baseurl:"
   Research Blog of the Autonomous Vision Group at the MPI-IS and University of Tübingen 
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://autonomousvision.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "/blog" # the subpath of your site, e.g. /blog
+# url: "https://autonomousvision.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
