--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 name                     : "Andreas Geiger"
 description: >- # this means to ignore newlines until "baseurl:"
   Research Blog of the Autonomous Vision Group at the MPI-IS and University of Tübingen 
-# url                      : "https://autonomousvision.github.io"
-# baseurl                  :  "/blog"
+url                      : "https://autonomousvision.github.io"
+baseurl                  :  "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /assets/images/header.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
@@ -106,31 +106,31 @@ analytics:
 
 
 # Site Author
-author:
-  name             : "Andreas Geiger"
-  avatar           : https://avg.is.tuebingen.mpg.de/uploads/employee/image/53/upper_body_tiny.jpg
-  bio              : ""
-  location         : "Tübingen - Germany"
-  email            :
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+# author:
+#   name             : "Andreas Geiger"
+#   avatar           :  https://avg.is.tuebingen.mpg.de/uploads/employee/image/53/upper_body_tiny.jpg
+#   bio              : ""
+#   location         : "Tübingen - Germany"
+#   email            :
+#   links:
+#     - label: "Email"
+#       icon: "fas fa-fw fa-envelope-square"
+#       # url: mailto:your.name@email.com
+#     - label: "Website"
+#       icon: "fas fa-fw fa-link"
+#       # url: "https://your-website.com"
+#     - label: "Twitter"
+#       icon: "fab fa-fw fa-twitter-square"
+#       # url: "https://twitter.com/"
+#     - label: "Facebook"
+#       icon: "fab fa-fw fa-facebook-square"
+#       # url: "https://facebook.com/"
+#     - label: "GitHub"
+#       icon: "fab fa-fw fa-github"
+#       # url: "https://github.com/"
+#     - label: "Instagram"
+#       icon: "fab fa-fw fa-instagram"
+#       # url: "https://instagram.com/"
 
 # Site Footer
 footer:
