--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ title_separator          : "-"
 name                     : "Andreas Geiger"
 description: >- # this means to ignore newlines until "baseurl:"
   Research Blog of the Autonomous Vision Group at the MPI-IS and University of Tübingen 
-url                      : "https://autonomousvision.github.io"
-baseurl                  :  "/blog"
+# url                      : "https://autonomousvision.github.io"
+# baseurl                  :  "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : /assets/images/header.jpg # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
