--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,10 @@ main:
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "Search"
-    url: /search/
+  - title: "Website"
+    url: https://avg.is.tuebingen.mpg.de/
+  # - title: "Search"
+  #   url: /search/
   # - title: "Pages"
   #   url: /page-archive/
   # - title: "Collections"
