Add site author.

--- a/_config.yml
+++ b/_config.yml
@@ -106,31 +106,7 @@ analytics:
 
 
 # Site Author
-# author:
-#   name             : "Andreas Geiger"
-#   avatar           :  https://avg.is.tuebingen.mpg.de/uploads/employee/image/53/upper_body_tiny.jpg
-#   bio              : ""
-#   location         : "Tübingen - Germany"
-#   email            :
-#   links:
-#     - label: "Email"
-#       icon: "fas fa-fw fa-envelope-square"
-#       # url: mailto:your.name@email.com
-#     - label: "Website"
-#       icon: "fas fa-fw fa-link"
-#       # url: "https://your-website.com"
-#     - label: "Twitter"
-#       icon: "fab fa-fw fa-twitter-square"
-#       # url: "https://twitter.com/"
-#     - label: "Facebook"
-#       icon: "fab fa-fw fa-facebook-square"
-#       # url: "https://facebook.com/"
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       # url: "https://github.com/"
-#     - label: "Instagram"
-#       icon: "fab fa-fw fa-instagram"
-#       # url: "https://instagram.com/"
+author: "Andreas Geiger"
 
 # Site Footer
 footer:
