--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ footer:
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: https://github.com/autonomousvision
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -129,7 +129,6 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
-
 
 # Reading Files
 include:
