Add subscription page.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,9 +4,12 @@ main:
   - title: "Categories"
     url: /categories/
   - title: "Tags"
-    url: /tags/
+    url: /tags/ 
+  - title: "Subscribe"
+    url: /subscribe/ 
   - title: "Website"
     url: https://avg.is.tuebingen.mpg.de/
+
   # - title: "Search"
   #   url: /search/
   # - title: "Pages"
