--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ reCaptcha:
   siteKey                :
   secret                 :
 atom_feed:
-  path                   : # blank (default) uses feed.xml
+  path                   : http://feeds.feedburner.com/AutonomousVisionBlog # blank (default) uses feed.xml
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
