--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Research Blog of the Autonomous Vision Group at the MPI-IS and University of Tübingen 
 url                      : "https://autonomousvision.github.io"
 baseurl                  :
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : autonomousvision/autonomousvision # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
