Add subscribe button in navigation.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,11 +5,10 @@ main:
     url: /categories/
   - title: "Tags"
     url: /tags/ 
-  # - title: "Subscribe"
-  #   url: /subscribe/ 
   - title: "Website"
     url: https://avg.is.tuebingen.mpg.de/
-
+  - title: "Subscribe"
+    url: /subscribe/ 
   # - title: "Search"
   #   url: /search/
   # - title: "Pages"
