--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -144,5 +144,5 @@ Peidong Liu:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://scholar.google.com/citations?user=XZczNEEAAAAJ&hl=en"Peidong Liu:
+      url: "https://scholar.google.com.sg/citations?user=XZczNEEAAAAJ&hl=en"
 
