--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,18 +8,12 @@ Axel Sauer:
       - label: "Website"
         icon: "fas fa-fw fa-link"
         url: "https://axelsauer.com/"
-      # - label: "Twitter"
-        # icon: "fab fa-fw fa-twitter-square"
-        # url: "https://twitter.com/"
-      #- label: "Facebook"
-      #  icon: "fab fa-fw fa-facebook-square"
-      #  url: "https://www.facebook.com/andreas.geiger.395"
-      # - label: "GitHub"
-        # icon: "fab fa-fw fa-github"
-        # url: "https://github.com/"
-      # - label: "Instagram"
-        # icon: "fab fa-fw fa-instagram"
-        # url: "https://instagram.com/"
+      - label: "Twitter"
+        icon: "fab fa-fw fa-twitter-square"
+        url: "https://twitter.com/ax_sauer"
+      - label: "GitHub"
+        icon: "fab fa-fw fa-github"
+        url: "https://github.com/xl-sr"
 
 Andreas Geiger:
     name             : "Andreas Geiger"
