--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -148,7 +148,7 @@ Michael Niemeyer:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://avg.is.tuebingen.mpg.de/person/mniemeyer"
+      url: "https://m-niemeyer.github.io/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/Mi_Niemeyer"
