--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -65,7 +65,7 @@ Aditya Prakash:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://avg.is.tuebingen.mpg.de/person/aprakash"
+      url: "https://ap229997.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/ap229997"
