--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ reCaptcha:
   siteKey                :
   secret                 :
 atom_feed:
-  path                   : http://feeds.feedburner.com/AutonomousVisionBlog # blank (default) uses feed.xml
+  path                   : #http://feeds.feedburner.com/AutonomousVisionBlog # blank (default) uses feed.xml
 search                   : true # true, false (default)
 search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -129,9 +129,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
-    - label: "Newsletter"
-      icon: "fas fa-fw fa-envelope-square"
-      url: /subscribe
+    #- label: "Newsletter"
+    #  icon: "fas fa-fw fa-envelope-square"
+    #  url: /subscribe
 
 # Reading Files
 include:
