updated profile ag

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -20,14 +20,14 @@ Andreas Geiger:
     avatar           :  https://avg.is.tuebingen.mpg.de/uploads/employee/image/53/upper_body_tiny.jpg
     bio              : ""
     location         : "Tübingen - Germany"
-    email            : "andreas.geiger@tue.mpg.de"
+    email            : "a.geiger@uni-tuebingen.de"
     links:
       - label: "Website"
         icon: "fas fa-fw fa-link"
-        url: "https://avg.is.tuebingen.mpg.de/person/ageiger"
-      # - label: "Twitter"
-        # icon: "fab fa-fw fa-twitter-square"
-        # url: "https://twitter.com/"
+        url: "https://www.cvlibs.net"
+      - label: "Twitter"
+        icon: "fab fa-fw fa-twitter-square"
+        url: "https://twitter.com/AutoVisionGroup"
       - label: "Facebook"
         icon: "fab fa-fw fa-facebook-square"
         url: "https://www.facebook.com/andreas.geiger.395"
